--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>recipes</title>
+        <title></title>
         <meta charset="utf-8">
     </head>
     <body>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <h1>Lasagna</h1>
     </body>
 </html>
