Added lists to lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,21 @@
     <body>
         <h1>Lasagna</h1>
         <img src="../images/lasagna.jpeg">
+        <h2>Description</h2>
+        <p>Lasagna is a dish made by intercalating cheese, sauce and the lasagna pasta.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Lasagna pasta</li>
+            <li>Cheese</li>
+            <li>Sauce</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Put sauce in your baking tray</li>
+            <li>Put cheese over the sauce></li>
+            <li>Put lasagna pasta over the cheese</li>
+            <li>Repeat until your tray is full</li>
+            <li>Bake and serve</li>
+        </ol>
     </body>
 </html>
