--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/applepie.html">Apple pie</a></li>
+        </ul>
     </body>
 </html>
