--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/applepie.html">Apple pie</a></li>
+        <li><a href="recipes/lemonade.html"></a></li>
         </ul>
     </body>
 </html>
